fix: incorrect system architecture detection in macOS.